# RShell

./: CMakeLists.txt  README.md  append_test.txt  input_red.txt  names.txt
header/: and.hpp  base.hpp  command.hpp  connector.hpp  double_out_redirection.hpp  input_redirection.hpp  or.hpp  parser.hpp  pipe.hpp  semicolon.hpp  single_out_redirection.hpp
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  input_redirection_tests.txt  multiple_command_tests.sh  output_redirection_tests.sh  output_redirection_tests.txt  pipe_operator_tests.sh  pipe_operator_tests.txt  precedence_tests.sh  precedence_tests.txt  single_command_tests.sh  test_literal_tests.sh  test_literal_tests.txt  test_symbolic_tests.sh  test_symbolic_tests.txt
prototype/: proto1.cpp  proto2.cpp  proto3.cpp  proto4.cpp  proto5.cpp
src/: and.cpp  command.cpp  double_out_redirection.cpp  input_redirection.cpp  main.cpp  or.cpp  parser.cpp  pipe.cpp  semicolon.cpp  single_out_redirection.cpp
unit_tests/: fakeFalseCommand.hpp  fakeTrueCommand.hpp  mockCommand.hpp  unit_tests.cpp
